syntax = "proto3";

option go_package = "github.com/ChethiyaNishanath/market-data-hub/cmd/api/orderbook";

package orderbook;

service OrderBook {
  rpc GetSnapshot (OrderBookSnapshotRequest) returns (GetSnapshotReply) {}
}

message OrderBookSnapshotRequest {
  string symbol = 1;
}

message Order {
  string price = 1;
  string amount = 2;
}

message GetSnapshotReply {
  string symbol = 1;
  string lastUpdateId = 2;
  repeated Order bids = 3;
  repeated Order asks = 4;
}